--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
             Encontre as melhores ofertas e descontos em primeira mão! 
             Não perca nenhuma oportunidade de economizar.
         </p>
-        <a href="https://chat.whatsapp.com/IcbNPpFc0G28tPycsBvvtR?mode=ems_copy_h_c" class="cta-button" id="whatsapp-link">
+        <a href="https://chat.whatsapp.com/IcbNPpFc0G28tPycsBvvtR?mode=ems_share_c" class="cta-button" id="whatsapp-link">
             Entrar no Grupo de WhatsApp
         </a>
     </div>
@@ -122,4 +122,5 @@
 </body>
 
 </html>
+
 
