--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
             Encontre as melhores ofertas e descontos em primeira mão! 
             Não perca nenhuma oportunidade de economizar.
         </p>
-        <a href="https://chat.whatsapp.com/IcbNPpFc0G28tPycsBvvtR?mode=ems_copy_t" class="cta-button" id="whatsapp-link">
+        <a href="https://www.youtube.com/watch?v=SLpkERB39IE" class="cta-button" id="whatsapp-link">
             Entrar no Grupo de WhatsApp
         </a>
     </div>
@@ -122,6 +122,7 @@
 </body>
 
 </html>
+
 
 
 
