--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
             Encontre as melhores ofertas e descontos em primeira mão! 
             Não perca nenhuma oportunidade de economizar.
         </p>
-        <a href="https://www.youtube.com/watch?v=SLpkERB39IE" class="cta-button" id="whatsapp-link">
+        <a href="#" target="_blank" class="cta-button" id="whatsapp-link">
             Entrar no Grupo de WhatsApp
         </a>
     </div>
@@ -114,7 +114,7 @@
             const whatsappLink = document.getElementById("whatsapp-link");
             
             // Coloque o link do seu grupo do WhatsApp aqui
-            const linkDoGrupo = "https://chat.whatsapp.com/SEULINKDOGRUPO";
+            const linkDoGrupo = "https://chat.whatsapp.com/IcbNPpFc0G28tPycsBvvtR?mode=ems_copy_t";
 
             whatsappLink.href = linkDoGrupo;
         });
@@ -122,6 +122,7 @@
 </body>
 
 </html>
+
 
 
 
